# doodle-rs

./: .gitignore  README.md
.docker/: Dockerfile.rust  Dockerfile.webapp  docker-compose.yaml
pico-2w-doodle-rs/: Cargo.toml  build.rs
pico-2w-doodle-rs/.cargo/: config.toml
pico-2w-doodle-rs/src/: display_task.rs  main.rs  networking_task.rs  setup_devices.rs
webapp-doodle-rs/: Cargo.toml  build.rs  index.html
webapp-doodle-rs/src/: inference.rs  lib.rs  model.rs  web.rs
webapp-doodle-rs/src/model/: mod.rs
