[package]
name = "pico-2w-doodle-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Embassy core dependencies - use crates.io versions
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-futures = "0.1"
embassy-net = { version = "*", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }

# CYW43 WiFi chip support - use crates.io versions
cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.8.0", features = ["defmt"] }

# Core embedded dependencies
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Additional useful crates
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

# OLED and graphics dependencies
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
heapless = "0.8"

# WebSocket support
embedded-websocket = { version = "0.9.4", default-features = false }
httparse = { version = "1.9", default-features = false }




[profile.dev]
debug = 2
opt-level = "s"

[profile.release]
lto = true
opt-level = "s"
