[package]
name = "webapp-doodle-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_dom = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# For HTTP requests to your Pico
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]