[package]
name = "webapp-doodle-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

# web-sys with WebSocket support
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "MouseEvent",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
    "Element",
    "DomRect",
] }

# Burn for ML inference - WASM compatible configuration
burn = { version = "0.18", default-features = false, features = ["ndarray", "std"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# https://github.com/rust-random/getrandom/#webassembly-support
getrandom = { version = "0.3.3", default-features = false, features = [
    "wasm_js",
] }

[build-dependencies]
burn-import = {version="0.18"}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
